syntax = "proto3";
package dipstick.uds.v1;

import "dipstick/uds/v1/message.proto";
import "dipstick/uds/v1/session.proto";

// UDS service.
service UdsService {
  // Opens a new session.
  rpc SessionOpen(SessionOpenRequest) returns (SessionOpenResponse);
  // Lists all sessions.
  rpc SessionList(SessionListRequest) returns (SessionListResponse);
  // Closes a session.
  rpc SessionClose(SessionCloseRequest) returns (SessionCloseResponse);

  // Performs a generic request and returns the response.
  rpc SvcGeneric(SvcGenericRequest) returns (SvcGenericResponse);
}

// SessionOpen request.
message SessionOpenRequest {}
// SessionOpen response.
message SessionOpenResponse {
  // Session info.
  SessionInfo session = 1;
}

// SessionList request.
message SessionListRequest {}
// SessionList response.
message SessionListResponse {
  // List of sessions.
  repeated SessionInfo sessions = 1;
}

// SessionClose request.
message SessionCloseRequest {
  // Id of the session to close.
  uint64 id = 1;
}
// SessionClose response.
message SessionCloseResponse {}

// SvcGeneric request.
message SvcGenericRequest {
  // Session to use.
  uint64 session_id = 1;
  // UDS request.
  Request request = 2;
}
// SvcGeneric response.
message SvcGenericResponse {
  // UDS response.
  Response response = 1;
}
